# projectsight-ocr-service

./: .env.example  README.md  benchmark_results_10pages.csv  benchmark_results_10pages.json  benchmark_results_quick.csv  benchmark_results_quick.json  main.py  pyproject.toml  run.bat
api/: gemini_service.py  judge_service.py  main.py  process_pdf_with_gemini.py
auth/: oauth.py
cache/: database.py  pdf_cache.db
config/: settings.py
docs/: architecture-and-onboarding.md
models/: schemas.py
prompts/: system_prompt.prompty
scripts/: benchmark_ocr.py
utils/: pdf_processor.py  text_similarity.py
web/: app.py
